Fix some style issues in RenderLayerCompositor https://bugs.webkit.org/show_bug.cgi?id=111369

Patch by Min Qin <qinmin@chromium.org> on 2013-03-04
Reviewed by Simon Fraser.

Just style fix, no test needed

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::frameViewDidScroll):
(WebCore::RenderLayerCompositor::requiresCompositingForPosition):

git-svn-id: svn://svn.chromium.org/blink/trunk@144710 bbb929c8-8fbe-4397-9dbb-9b2b20218538